src/renderer/style.less
/* ... */
/* Artist Page End */

.text-overflow-elipsis {
  display: -webkit-box;
  min-width: 0px;
  overflow: hidden;
  text-overflow: ellipsis;
  -webkit-line-clamp: 1;
  -webkit-box-orient: vertical;
}


.mediaitem-artwork {
  border-radius: var(--mediaItemRadius);
  overflow: hidden;
  flex: 0 0 auto;
  position: relative;
  width: 100%;
  height: 100%;
  background-image: url("https://beta.music.apple.com/assets/product/MissingArtworkMusic.svg");
  background-size: cover;
  background-position: center;

  .animatedartwork-view-box {
    position: absolute;
    top: 0px;
    width: 100%;
    height: 100%;

    .animated {
      position: absolute;
      top: 0px;
      width: 100%;
      height: 100%;

      video {
        width: 100%;
        height: 100%;
      }
    }
  }

  &.rounded {
    border-radius: 100%;

    &::after {
      border-radius: 100%;
    }
  }

  &::after {
    content: "";
    box-shadow: var(--mediaItemShadow);
    z-index: 1;
    width: 100%;
    height: 100%;
    position: absolute;
    top: 0;
    left: 0;
    border-radius: inherit;
  }

  img {
    width: 100%;
    height: 100%;
    object-fit: cover;
    image-rendering: -webkit-optimize-contrast;
  }
}

.queue-panel {
  height: 100%;
  width: 100%;
  display: flex;
  flex-flow: column;

  .queue-header-text {
    margin: 18px 6px;
  }

  .queue-body {
    overflow: overlay;
    height: 100%;
  }

  .queue-footer {
    width: 100%;
    padding: 12px;
  }

  .autoplay {
    background: rgb(200 200 200 / 15%);
    appearance: none;
    border: 0;
    border-radius: 6px;
    font-weight: 500;
    font-family: inherit;
    height: 30px;
  }
}

/* queue item */
.cd-queue-item {
  border-bottom: 1px solid rgb(200 200 200 / 10%);
  padding: 8px;

  .row,
  .col {
    padding: 0px;
    margin: 0px;
  }

  .artwork {
    width: 32px;
    height: 32px;
    flex: 0 0 auto;
  }

  &.selected {
    background: var(--selected);
  }

  &:active {
    background: var(--selected-click);
    color: #eee;
  }

  .queue-info {
    display: flex;
    flex-direction: column;

    .queue-title {
      font-size: 14px;
    }

    .queue-subtitle {
      font-size: 13px;
      opacity: 0.85;
    }
  }
}

/* horizontal media scroller */
.cd-hmedia-scroller {
  margin: 0 auto;
  display: flex;
  flex-flow: row;
  overflow-x: scroll;
  overflow-y: hidden;

  &::-webkit-scrollbar-thumb {
    box-shadow: none;
  }

  &:hover::-webkit-scrollbar-thumb {
    box-shadow: inset 0px 0px 10px 10px rgb(200 200 200 / 50%);
  }
}

/* mediaitem-list-item */
.cd-mediaitem-list-item {
  width: 100%;
  height: 60px;
  display: flex;
  flex: 0 0 auto;
  flex-direction: row;
  font-size: 14px;
  justify-content: center-between;
  align-items: center;
  border-bottom: 1px solid rgb(200 200 200 / 10%);

  .artwork {
    height: 42px;
    width: 42px;
    border-radius: var(--mediaItemRadius);
    object-fit: cover;
    object-position: center;
    flex: 0 0 auto;
    background-repeat: no-repeat;
    margin: 12px;
    border: 0px;
    outline: none;
    position: relative;
    overflow: hidden;

    .overlay-play {
      background: rgba(0, 0, 0, 0.5);
      opacity: 0;
      appearance: none;
      border: 0;
      position: absolute;
      top: 0;
      left: 0;
      width: 100%;
      height: 100%;
      padding: 0px;
      z-index: 5;
      cursor: pointer;

      &:hover {
        opacity: 1;
      }

      &:active {
        background: var(--selected-click);
      }
    }
  }

  .artwork.round {
    border-radius: var(--mediaItemRadiusRound);
  }

  .info-rect {
    width: 100%;
    height: 100%;
    display: flex;
    flex-flow: column;
    justify-content: center;
  }

  .title {
    width: 100%;
  }

  .subtitle {
    width: 90%;
    font-size: 12px;
    opacity: 0.7;
  }

  .duration {
    min-width: 60px;
    text-align: center;
    height: 100%;
    display: flex;
    align-items: center;
    justify-content: center;
  }

  .metainfo {
    min-width: 145px;
    text-align: center;
    height: 100%;
    display: flex;
    align-items: center;
    justify-content: center;
  }

  .content-rating {
    text-transform: uppercase;
    font-size: 10px;
    border-radius: 3px;
    background: rgb(200 200 200 / 15%);
    width: 60px;
    text-align: center;
    padding: 5px;
    margin-right: 12px;
    flex: 0 0 auto;
    font-weight: 500;
    color: #ccc;
  }

  .isLibrary {
    button {
      appearance: none;
      border: 0px;
      background: transparent;
      cursor: pointer;
      filter: contrast(0.8);
    }
  }

  &:hover {
    background: rgb(200 200 200 / 10%);

    .overlay-play {
      opacity: 1;
    }
  }

  &.mediaitem-selected {
    background: var(--selected);
  }


  &:active {
    background: var(--selected-click);
    color: #eee;
  }
}

/* mediaitem-hrect */
.cd-mediaitem-hrect {
  background: rgb(255 255 255 / 18%);
  width: 264px;
  height: 100px;
  display: inline-flex;
  flex: 0 0 auto;
  flex-direction: row;
  font-size: 14px;
  justify-content: center;
  align-items: center;
  border-radius: 6px;
  cursor: pointer;

  .artwork {
    height: 70px;
    width: 70px;
    background: blue;
    border-radius: var(--mediaItemRadius);
    background: var(--artwork);
    background-size: contain;
    flex: 0 0 auto;
    background-repeat: no-repeat;
    margin: 18px;
  }

  .artwork.round {
    border-radius: var(--mediaItemRadiusRound);
  }

  .info-rect {
    width: 100%;
  }

  .title {
    width: 100%;
    text-align: center;
  }

  .subtitle {
    width: 100%;
    text-align: center;
    font-size: 12px;
  }
}
/* ... */

